--- a/org.jacoco.build/build.xml
+++ b/org.jacoco.build/build.xml
@@ -57,6 +57,7 @@
 			
 			<!-- Tests -->
 			<runbundlebuild bundleid="org.jacoco.core.test" target="@{target}"/>
+			<runbundlebuild bundleid="org.jacoco.agent.test" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.report.test" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.ant.test" target="@{target}"/>
 			
