--- a/org.jacoco.agent/.project
+++ b/org.jacoco.agent/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jacoco.agent</name>
+	<name>org.jacoco.agent.rt</name>
 	<comment></comment>
 	<projects>
 	</projects>
