#50: New bundle for agent resource.

--- a/org.jacoco.build/build.xml
+++ b/org.jacoco.build/build.xml
@@ -64,13 +64,14 @@
 			
 			<!-- Implementation -->
 			<runbundlebuild bundleid="org.jacoco.core" target="@{target}"/>
+			<runbundlebuild bundleid="org.jacoco.agent.rt" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.agent" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.report" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.ant" target="@{target}"/>
 			
 			<!-- Tests -->
 			<runbundlebuild bundleid="org.jacoco.core.test" target="@{target}"/>
-			<runbundlebuild bundleid="org.jacoco.agent.test" target="@{target}"/>
+			<runbundlebuild bundleid="org.jacoco.agent.rt.test" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.report.test" target="@{target}"/>
 			<runbundlebuild bundleid="org.jacoco.ant.test" target="@{target}"/>
 			
