--- a/org.jacoco.agent/.project
+++ b/org.jacoco.agent/.project
@@ -25,4 +25,11 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/jacocoagent.jar</name>
+			<type>1</type>
+			<locationURI>BUILD_JACOCOAGENT_JAR</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
