Trac #77: Refactor Ant task tests.

--- a/org.jacoco.ant.test/build.properties
+++ b/org.jacoco.ant.test/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               about.html
+               about.html,\
+               lib/ant-antunit-1.2alpha.jar
