Trac #115: Move to Eclipse 3.6.

--- a/org.jacoco.agent/.project
+++ b/org.jacoco.agent/.project
@@ -29,7 +29,7 @@
 		<link>
 			<name>src/jacocoagent.jar</name>
 			<type>1</type>
-			<locationURI>BUILD_JACOCOAGENT_JAR</locationURI>
+			<locationURI>WORKSPACE_LOC/org.jacoco.build/result/dist/lib/jacocoagent.jar</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
