Trac #136: Disable deployment for org.jacoco.ant-nodeps

--- a/org.jacoco.ant-nodeps/pom.xml
+++ b/org.jacoco.ant-nodeps/pom.xml
@@ -26,6 +26,7 @@
 
   <properties>
     <jarsigner.skip>true</jarsigner.skip>
+    <maven.deploy.skip>true</maven.deploy.skip>
   </properties>
 
   <dependencies>
