Fix Sonar analysis (findbugs expects compiled classes in org.jacoco.build)

--- a/org.jacoco.agent.rt.test/pom.xml
+++ b/org.jacoco.agent.rt.test/pom.xml
@@ -37,4 +37,8 @@
       <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+  </build>
 </project>
