--- a/org.jacoco.report/pom.xml
+++ b/org.jacoco.report/pom.xml
@@ -32,4 +32,8 @@
       <artifactId>org.jacoco.core</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+  </build>
 </project>
