--- a/org.jacoco.core/pom.xml
+++ b/org.jacoco.core/pom.xml
@@ -38,6 +38,8 @@
   </dependencies>
 
   <build>
+    <sourceDirectory>src</sourceDirectory>
+
     <plugins>
       <!-- We can't define qualified.bundle.version as a project property, because buildQualifier constructed after reading POM by maven-osgi-packaging-plugin -->
       <!-- but we need it for resource filtering in compliance with Ant build, so here is workaround -->
