--- a/org.jacoco.doc/pom.xml
+++ b/org.jacoco.doc/pom.xml
@@ -204,23 +204,26 @@
                     <dependencySourceExclude>org.jacoco:org.jacoco.ant-nodeps</dependencySourceExclude>
                   </dependencySourceExcludes>
                   <doctitle>JaCoCo ${project.version} API</doctitle>
+                  <windowtitle>JaCoCo ${project.version} API</windowtitle>
                   <use>true</use>
                   <version>false</version>
                   <groups>
                     <!-- Note: using org.jacoco.core.* for packages would omit the org.jacoco.core package but using org.jacoco* will include it. -->
                     <group>
-                      <title>Core</title>
+                      <title>Bundle org.jacoco.core</title>
                       <packages>org.jacoco.core*</packages>
                     </group>
                     <group>
-                      <title>Report</title>
+                      <title>Bundle org.jacoco.report</title>
                       <packages>org.jacoco.report*</packages>
                     </group>
                     <group>
-                      <title>Agent</title>
+                      <title>Bundle org.jacoco.agent</title>
                       <packages>org.jacoco.agent*</packages>
                     </group>
                   </groups>
+                  <overview>javadoc/overview.html</overview>
+                  <stylesheetfile>javadoc/stylesheet.css</stylesheetfile>
                 </configuration>
               </execution>
             </executions>
