--- a/org.jacoco.ant-nodeps/pom.xml
+++ b/org.jacoco.ant-nodeps/pom.xml
@@ -27,6 +27,7 @@
   <properties>
     <jarsigner.skip>true</jarsigner.skip>
     <maven.deploy.skip>true</maven.deploy.skip>
+    <maven.javadoc.skip>true</maven.javadoc.skip>
   </properties>
 
   <dependencies>
