Trac #25: Eat own dog food - use jacoco-maven-pluGin during build.

--- a/org.jacoco.agent.rt.test/pom.xml
+++ b/org.jacoco.agent.rt.test/pom.xml
@@ -14,19 +14,14 @@
 
   <parent>
     <groupId>org.jacoco</groupId>
-    <artifactId>org.jacoco.build</artifactId>
+    <artifactId>org.jacoco.tests</artifactId>
     <version>0.5.3-SNAPSHOT</version>
-    <relativePath>../org.jacoco.build</relativePath>
+    <relativePath>../org.jacoco.tests</relativePath>
   </parent>
 
   <artifactId>org.jacoco.agent.rt.test</artifactId>
 
   <name>JaCoCo :: Test :: Agent RT</name>
-
-  <properties>
-    <maven.deploy.skip>true</maven.deploy.skip>
-    <maven.javadoc.skip>true</maven.javadoc.skip>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -38,8 +33,4 @@
       <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
-
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-  </build>
 </project>
