--- a/jacoco-maven-plugin/pom.xml
+++ b/jacoco-maven-plugin/pom.xml
@@ -51,6 +51,10 @@
       <groupId>org.jacoco</groupId>
       <artifactId>org.jacoco.core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>org.jacoco.report</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
